# Media-Tools

./: .gitignore  Makefile  README.md  app.py  install.ps1  install_media_tools.bat  media-browser-suite.cmd  media-tools.cmd  pyproject.toml  requirements.txt  run_media_browser_suite.bat  run_media_tools.bat  run_media_tools_dev.bat
media_suite/: config.py  file_browser.py  launcher.py  server.py
media_suite/services/: __init__.py  audio_tools.py  stereo_tools.py  video_tools.py
media_suite/static/: styles.css
media_tools/: __init__.py  catalog.py  config.py  devtools.py  file_browser.py  launcher.py  server.py  state.py  utils.py
media_tools/services/: audio_live_service.py  audio_live_worker.py  audio_tools.py  photo_tools.py  video_tools.py
media_tools/static/: app.js  index.html  styles.css
tests/: __init__.py  test_bird_live.py  test_bird_live_integration.py
